defining their chapters

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -6,5 +6,11 @@
 \maketitle
 Welcome to Higher mathematics
 \tableofcontents
+\chapter{Why We Prove Things}
+\chapter{Understanding numbers}
+\chapter{A First Technique}
+\chapter{Adding To Our List Of Techniques}
+\chapter{The Axiomatic Approach}
+\chapter{Towards a first theory}
 
 \end{document}
