chapter summaries added

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -7,10 +7,16 @@
 Welcome to Higher mathematics
 \tableofcontents
 \chapter{Why We Prove Things}
+In this chapter I explain why proving things can be useful and how to make use of it in your daily life, career and in the larger context of the universe of knowledge
 \chapter{Understanding numbers}
+In this chapter I give an introduction to numbers and how they came about.  Then I give some basic examples and exercises of properties of numbers.  
 \chapter{A First Technique}
+In this chapter I give an analysis of a first technique for proving things as well as a number of examples of how to use the technique.
 \chapter{Adding To Our List Of Techniques}
+In this chapter I present more techniques with similar analysis.  Here we will review the first technique and show how it can be used in conjunction with the other techniques we will learn.
 \chapter{The Axiomatic Approach}
-\chapter{Towards a first theory}
 
+\chapter{Towards A First Theory}
+\chapter{Expanding Our Theory}
+\chapter{Exploring new roads}
 \end{document}
