adding to the descriptions

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -15,8 +15,10 @@ In this chapter I give an analysis of a first technique for proving things as we
 \chapter{Adding To Our List Of Techniques}
 In this chapter I present more techniques with similar analysis.  Here we will review the first technique and show how it can be used in conjunction with the other techniques we will learn.
 \chapter{The Axiomatic Approach}
-
+Here we will discuss some major axioms in mathematics. As well as the use of conventions and primitives.  This will inform a larger understanding of how thought works. And provide a way to look beneath the covers of logic.
 \chapter{Towards A First Theory}
+Here we will use our axioms to construct a theory of mathematics and then we will relate this theory to some tanglible examples.
 \chapter{Expanding Our Theory}
+
 \chapter{Exploring new roads}
 \end{document}
